--- a/css/style.css
+++ b/css/style.css
@@ -85,6 +85,9 @@ h1, h2, h3, h4, h5 {
  .slider_info h2{
    color:#fff;
  }
+ #top_sec{
+   color:#fff
+ }
 
 /* line 42, C:/Users/SPN Graphics/Desktop/CL September/Edu mark/207 Education/HTML/scss/_reset.scss */
 h1 a,
@@ -824,6 +827,7 @@ a.more_button{
   top: 0;
   z-index: 99;
   border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+  
 }
 
 @media (max-width: 767px) {
@@ -844,6 +848,7 @@ a.more_button{
 .header-area .main-header-area {
   padding: 0 150px;
   background-color:#ffffff;
+
 }
 
 @media (max-width: 767px) {
@@ -1248,7 +1253,7 @@ a.more_button{
    color: white;
    background-size:cover;
    padding: 20px;
- /* background-color:linear-gradient(to right,#65DbD1,#00f);*/
+
 }
 
 /* line 5, C:/Users/SPN Graphics/Desktop/CL September/Edu mark/207 Education/HTML/scss/_slider.scss */
@@ -1475,7 +1480,7 @@ a.more_button{
 }
 
 /* line 62, C:/Users/SPN Graphics/Desktop/CL September/Edu mark/207 Education/HTML/scss/_about.scss */
-.about_area .about_tutorials .courses {
+.about_area .about_tutorials .cses {
   border-radius: 50%;
   text-align: center;
   top: -5px;
@@ -2573,6 +2578,18 @@ a.more_button{
   padding-top: 70px;
   padding-bottom: 1=770px;
 }
+.courses_bg{
+  background-image:
+  linear-gradient(to right, rgba(101, 219, 209, 0.60),
+                  rgba(0, 8, 153, 0.60)),
+  url(../img/banner/back7.jpg);
+   width: 100%;
+   background-size: cover;
+   color: white;
+   background-size:cover;
+   padding: 20px;
+
+}
 
 @media (max-width: 767px) {
   /* line 1, C:/Users/SPN Graphics/Desktop/CL September/Edu mark/207 Education/HTML/scss/_coures.scss */
@@ -2610,7 +2627,7 @@ a.more_button{
 
 /* line 23, C:/Users/SPN Graphics/Desktop/CL September/Edu mark/207 Education/HTML/scss/_coures.scss */
 .our_courses .single_course .icon i {
-  color: #FD8E5E;
+  color: rgb(230, 77, 31);
   font-size: 45px;
   -webkit-transition: 0.3s;
   -moz-transition: 0.3s;
@@ -2620,7 +2637,7 @@ a.more_button{
 
 /* line 30, C:/Users/SPN Graphics/Desktop/CL September/Edu mark/207 Education/HTML/scss/_coures.scss */
 .our_courses .single_course .icon.blue i {
-  color: #04D2C8 !important;
+  color:#04D2C8 !important;
 }
 
 /* line 35, C:/Users/SPN Graphics/Desktop/CL September/Edu mark/207 Education/HTML/scss/_coures.scss */
@@ -2632,7 +2649,7 @@ a.more_button{
 .our_courses .single_course h3 {
   font-size: 18px;
   font-weight: 400;
-  color: #1F1F1F;
+  color: #FFFFFF;
   margin-bottom: 22px;
   margin-top: 7px;
   -webkit-transition: 0.3s;
@@ -2644,7 +2661,7 @@ a.more_button{
 /* line 48, C:/Users/SPN Graphics/Desktop/CL September/Edu mark/207 Education/HTML/scss/_coures.scss */
 .our_courses .single_course p {
   font-size: 17px;
-  color: #727272;
+  color: #fcf7f7;
   -webkit-transition: 0.3s;
   -moz-transition: 0.3s;
   -o-transition: 0.3s;
@@ -2654,7 +2671,7 @@ a.more_button{
 /* line 53, C:/Users/SPN Graphics/Desktop/CL September/Edu mark/207 Education/HTML/scss/_coures.scss */
 .our_courses .single_course:before {
   position: absolute;
-  background: #FD8E5E;
+  background: #326FA8;
   bottom: 0;
   left: 0;
   width: 100%;
@@ -6719,14 +6736,87 @@ h6 {
   height: 90px;
 }
 
-/* FOR TESTIMONIALS NEW Create two equal columns that floats next to each other */
+/* FOR TESTIMONIALS NEW Create two equal columns that floats next to each other 
 .testc {
   float: left;
   width: 50%;
   padding: 10px;
-  height: 300px; /* Should be removed. Only for demonstration */
+  height: 300px; 
+  /* Should be removed. Only for demonstration 
 }
 
 .testr{
-  padding-bottom: 300px;
+  padding: 30px 30px 350px 30px;
+}
+.filler{
+	height: 100px;
+}*/
+
+p, span, h2{
+	color: white;
+}
+
+/* Three Column layout for stats*/
+.columns {
+	display: flex;
+	flex-flow: row wrap;
+	justify-content: center;
+	margin: 5px 0;
+}
+
+.column {
+	flex: 1;
+	border: 4px solid white;
+	border-radius: 15px;
+	margin : 3px;
+	padding: 10px;
+	&:first-child { margin-left: 0; }
+	&:last-child { margin-right: 0; }
+	
+}
+
+.c1{
+	background: rgb(0,195,168);
+	background: -moz-linear-gradient(86deg, rgba(0,195,168,1) 51%, rgba(5,168,166,1) 100%);
+	background: -webkit-linear-gradient(86deg, rgba(0,195,168,1) 51%, rgba(5,168,166,1) 100%);
+	background: linear-gradient(86deg, rgba(0,195,168,1) 51%, rgba(5,168,166,1) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#00c3a8",endColorstr="#05a8a6",GradientType=1);
+}
+
+.c2{
+	background: rgb(5,168,166);
+	background: -moz-linear-gradient(86deg, rgba(5,168,166,1) 51%, rgba(1,103,156,1) 100%);
+	background: -webkit-linear-gradient(86deg, rgba(5,168,166,1) 51%, rgba(1,103,156,1) 100%);
+	background: linear-gradient(86deg, rgba(5,168,166,1) 51%, rgba(1,103,156,1) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#05a8a6",endColorstr="#01679c",GradientType=1);
+}
+
+.c3{
+	background: rgb(1,103,156);
+	background: -moz-linear-gradient(86deg, rgba(1,103,156,1) 51%, rgba(0,46,161,1) 100%);
+	background: -webkit-linear-gradient(86deg, rgba(1,103,156,1) 51%, rgba(0,46,161,1) 100%);
+	background: linear-gradient(86deg, rgba(1,103,156,1) 51%, rgba(0,46,161,1) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#01679c",endColorstr="#002ea1",GradientType=1);
+}
+
+/*media queries for column responsiveness*/
+@media screen and (max-width: 980px) {
+  .columns .column {
+		margin-bottom: 5px;
+    flex-basis: 40%;
+		&:nth-last-child(2) {
+			margin-right: 0;
+		}
+		&:last-child {
+			flex-basis: 100%;
+			margin: 0;
+		}
+	}
+}
+
+@media screen and (max-width: 680px) {
+	.columns .column {
+		flex-basis: 100%;
+		margin: 0 0 5px 0;
+	}
 }
