--- a/css/style.css
+++ b/css/style.css
@@ -6879,3 +6879,85 @@ p, span, h2{
   border-radius: 15px;
   padding: 10%;
 }
+
+
+/* MODIFIED POPULAR COURSES*/
+@media (min-width: 768px) {
+	/* show 3 items */
+	.carousel-inner .active,
+	.carousel-inner .active + .carousel-item,
+	.carousel-inner .active + .carousel-item + .carousel-item {
+	  display: block;
+	}
+  
+	.carousel-inner .carousel-item.active:not(.carousel-item-right):not(.carousel-item-left),
+	.carousel-inner .carousel-item.active:not(.carousel-item-right):not(.carousel-item-left) + .carousel-item,
+	.carousel-inner .carousel-item.active:not(.carousel-item-right):not(.carousel-item-left) + .carousel-item + .carousel-item {
+	  transition: none;
+	}
+  
+	.carousel-inner .carousel-item-next,
+	.carousel-inner .carousel-item-prev {
+	  position: relative;
+	  transform: translate3d(0, 0, 0);
+	}
+  
+	.carousel-inner .active.carousel-item + .carousel-item + .carousel-item + .carousel-item {
+	  position: absolute;
+	  top: 0;
+	  right: -33.3333%;
+	  z-index: -1;
+	  display: block;
+	  visibility: visible;
+	}
+  
+	/* left or forward direction */
+	.active.carousel-item-left + .carousel-item-next.carousel-item-left,
+	.carousel-item-next.carousel-item-left + .carousel-item,
+	.carousel-item-next.carousel-item-left + .carousel-item + .carousel-item,
+	.carousel-item-next.carousel-item-left + .carousel-item + .carousel-item + .carousel-item {
+	  position: relative;
+	  transform: translate3d(-100%, 0, 0);
+	  visibility: visible;
+	}
+  
+	/* farthest right hidden item must be abso position for animations */
+	.carousel-inner .carousel-item-prev.carousel-item-right {
+	  position: absolute;
+	  top: 0;
+	  left: 0;
+	  z-index: -1;
+	  display: block;
+	  visibility: visible;
+	}
+  
+	/* right or prev direction */
+	.active.carousel-item-right + .carousel-item-prev.carousel-item-right,
+	.carousel-item-prev.carousel-item-right + .carousel-item,
+	.carousel-item-prev.carousel-item-right + .carousel-item + .carousel-item,
+	.carousel-item-prev.carousel-item-right + .carousel-item + .carousel-item + .carousel-item {
+	  position: relative;
+	  transform: translate3d(100%, 0, 0);
+	  visibility: visible;
+	  display: block;
+	  visibility: visible;
+	}
+	.card{
+		width: 250px;
+		height: 400px;
+		margin-right: 50px;
+		margin-left: 100px;
+		margin-top: 50px;
+		
+  }
+  .card-text{
+    color: #000;
+  }
+  .card-title{
+    font-weight: bold;
+    text-align: center;
+  }
+  }
+  /* END OF MODIFIED POPULAR COURSES */
+
+  
